--- a/Reto5/css/styles.css
+++ b/Reto5/css/styles.css
@@ -137,26 +137,7 @@ footer {
 
 .mail{
     color: rgb(217, 243, 241);
-    text-decoration: none;
-}
-.flex-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    gap: 20px;
-    flex-wrap: wrap;
-}
-
-.flex-item {
-    flex: 1;
-    min-width: 250px;
-    background-color: rgb(217, 243, 241);
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin: 5px;
-    text-align: center;
-}
+    text-decoration: none;}
 
 /*  
     Reorganiza el contenido para que en pantallas móviles
