--- a/Reto5/css/styles.css
+++ b/Reto5/css/styles.css
@@ -145,13 +145,29 @@ footer {
 */
 
 @media (max-width: 768px) {
+    h1{
+        font-size: 1.5em;
+    }
     .layout-grid {
+        grid-template-columns: 1fr;
         grid-template-areas:
             "header"
             "sidebar"
             "portfolio"
             "footer";
-        grid-template-columns: 1fr; 
+            grid-template-rows: repeat(4,auto);
+
+    .portfolio{
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "item1"
+        "item2"
+        "item3"
+        "item4"
+        "item5";
+        padding-bottom: 90px;
+    }
+        
     }
 }
 
