--- a/Reto5/css/styles.css
+++ b/Reto5/css/styles.css
@@ -39,7 +39,7 @@ h1 {
 
 .layout-grid {
     display: grid;                          
-    grid-template-columns: 280px 1fr;     
+    grid-template-columns: 1fr;     
     gap: 0px;                              
     padding: 0px; 
     height: 100vh;                         
@@ -49,12 +49,16 @@ h1 {
 
 .sidebar {
   background-color: cadetblue;
+  box-sizing: border-box;
   padding: 20px;
-  position: sticky;
+  position: fixed;
   top: 0;
-  bottom: 0;
-  left: 0;
+  left: 0; 
   height: 100vh;
+  width: 280px;
+  overflow-y: auto;
+  z-index: 2;
+ 
 }
 
 .sidebar ul {
@@ -97,7 +101,7 @@ ul{
     display: grid;
     gap: 20px;
     margin-right: 20px;
-    margin-left: 20px;
+    margin-left: 300px;
     margin-bottom: 100px;
     margin-top: 20px;
     grid-template-columns: repeat(3, 1fr);
@@ -113,8 +117,7 @@ ul{
 .item:nth-child(2) {grid-area: item2;}
 .item:nth-child(3) {grid-area: item3;}
 .item:nth-child(4) {grid-area: item4;}
-.item:nth-child(5) {grid-area: item5;
-                    margin-bottom: 60px;}
+.item:nth-child(5) {grid-area: item5;}
 
 
 .item{
@@ -133,6 +136,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 5;
 }
 
 .mail{
