--- a/Proyecto/Energía Bogotá/css/styles.css
+++ b/Proyecto/Energía Bogotá/css/styles.css
@@ -1,3 +1,75 @@
 body{
   background-color: #fcffee;
+  color: #333;
+  font-family: Arial,sans-serif;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+
+.header{
+  background-color: #5d8736;
+  color: white;
+  padding: 5px 0;
+  text-align: center;
+}
+
+nav{
+  background-color: #809d3c;
+  padding: 10px;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  
+}
+
+nav ul {
+  display: flex;
+  list-style-type: none;
+  gap: 20px;
+  justify-content: center;
+  margin: 0;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+.main-content{
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  gap: 20px;
+  align-content: space-evenly;
+}
+
+.grafico{
+  background-color: white;
+  border-radius:10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  width:"600" ;
+  height:"400";
+}
+
+
+
+canvas{
+  margin: 0 auto;
+  display: grid;
+
+  height: 120%;
+
+}
+
+footer{
+  background-color: #809d3c;
+  color: white;
+  text-align: center;
+  padding: 0;
+  margin-top: 0;
+}
+
